@@ -140,7 +140,8 @@ and how they are used.
     0400      <a href="#CTCT">CTCT</a>    30880  192.168.100.2  30880  2048 &nbsp; &nbsp; &nbsp;
     0401      <a href="#CTCT">CTCT</a>    30881  192.168.100.2  30881  2048
     0420.2    <a href="#CTCI">CTCI</a>    192.168.200.1  192.168.200.2
-    0440.2    <a href="#LCS">LCS</a>     -n   /dev/net/tun   192.168.200.2
+    0440.2    <a href="#LCS">LCS</a>      -n   /dev/net/tun   192.168.200.2
+    0A00.3    <a href="#QETH">QETH</a>    iface /dev/net/tun
 
     0580      <a href="#3420">3420</a>    /dev/nst0   # SCSI  (Linux or Windows)
     0581      <a href="#3420">3420</a>    \\.\Tape0   # SCSI  (Windows only)
@@ -1843,6 +1844,22 @@ and how they are used.
                 </td>
                 <td>
                         <a href="#LCS">"LCS" (LAN Channel Station)
+                        <br>TUN/TAP Driver</a>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>
+                        (( <a href="#QETH">QETH</a> ))
+                </td>
+                <td>
+                            OSA Express IP Layer 2 support only.
+                            Supported only for linux guests.
+                            TAP Adapter must be bridged to a local LAN.
+                </td>
+                <td>
+                        <a href="#QETH">"QETH" (OSA/QDIO Ethernet Adapter)
                         <br>TUN/TAP Driver</a>
                 </td>
             </tr>
