@@ -806,6 +806,7 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>Load-Program-Parameter Facility
 <li>IPTE-Range Facility
 <li>Enhanced-DAT Facility
+<li>Queued Direct I/O (QDIO)
 </ul>
 
 <P>The following optional features of z/Architecture have not yet been implemented:</P>
