@@ -1,3 +1,4 @@
+10 Jan 2011 QETH(QDIO) IP Layer 2 support for linux guests - Jan Jaeger / Harold Grovesteen
 05 Jan 2011 Fix configure '-g' flag handling for "--enable-debug=yes" - Fish
 14 Dec 2010 Enhanced DAT - Jan Jaeger
 06 Dec 2010 Improved scsimount functionality (better scaling) - Fish
